# tera-cli

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.adoc  README.md  README_src.adoc  default.nix  deny.toml  flake.nix  justfile
.github/workflows/: build-readme.yml  quick-check.yml  release.yml
Formula/: README.adoc  data.yaml  tera.rb
data/: data.json  data.toml  data.yaml  env-key.tmpl  metadata_v12_md.j2  metadata_v12_md.tera  template.tmpl
data/basic/: basic.tera  basic.toml  basic.yaml  fluent.tera  fluent.yaml
data/cargo-toml/: cargo-toml.tera
data/env-basic/: env-count.tera  env-sample.tera
data/env-file/: .env.file  env-file.tera
data/include/: hello.txt  world.txt
data/inheritance/: base.txt  child.txt
data/locales/en-US/: test.ftl
data/locales/tr-TR/: test.ftl
data/polkadot-metadata/: metdata.tera  output.md  v12.json  v13.json
data/tests/: dash-test.tera  dash-test.yaml
data/throw/: throw.tera
doc/: usage.adoc
src/: context.rs  main.rs  opts.rs  template.rs  wrapped_context.rs
templates/: changelog.md  env-debug.txt  formula.rb  release.md  tera.rb
tests/: data.json  template.tmpl  test.rs
