cargo-features = ["edition2021"]

[package]
authors = ["chevdor <chevdor@gmail.com>"]
edition = "2021"
name = "tera-cli"
version = "0.2.0"
description = "A command line utility written in Rust to render templates from json|toml|yaml && ENV, using the tera templating engine"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.9"
log = "0.4"
serde = "1.0"
serde_json = {version = "1.0", optional = false}
serde_yaml = {version = "0.8", optional = false}
tera = "1.12"
toml = {version = "0.5", optional = false}

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"

[[bin]]
name = "tera"
path = "src/main.rs"

[package.metadata.deb]
assets = [
  ["target/release/tera", "usr/bin/", "755"],
]
copyright = "2021, Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
depends = "$auto"
extended-description = """\
tera-ci offers powerful features related to your environment variables, allowing you to control the output **both** from the context data you pass but also from the ENV variables set on your system."""
license-file = ["LICENSE", "0"]
maintainer = "Wilfried Kopp aka. Chevdor <chevdor@gmail.com>"
priority = "optional"
section = "utility"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
